// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`JsonInput matches snapshot (null) 1`] = `
<div
  class="json-input"
>
  <div
    class=" ace_editor ace_hidpi ace-solarized-dark ace_dark"
    id="ace-editor"
    style="width: 100%; height: 8vh; font-size: 12px;"
  >
    <!-- Ace editor, mode: ace/mode/hjson, value: "" -->
  </div>
</div>
`;

exports[`JsonInput matches snapshot (value) 1`] = `
<div
  class="json-input"
>
  <div
    class=" ace_editor ace_hidpi ace-solarized-dark ace_dark"
    id="ace-editor"
    style="width: 100%; height: 8vh; font-size: 12px;"
  >
    <!-- Ace editor, mode: ace/mode/hjson, value: "{\\n  \\"hello\\": [\\n    \\"world\\",\\n    {\\n      \\"a\\": 1,\\n      \\"b\\": 2\\n    }\\n  ]\\n}" -->
  </div>
</div>
`;
